--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
