--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
