--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/accordion": "^2.0.32",
-    "next": "14.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.1.0",
+    "@nextui-org/accordion": "^2.0.40",
+    "next": "^14.2.15",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
